--- a/source/src/main/webapp/css/SearchResult.css
+++ b/source/src/main/webapp/css/SearchResult.css
@@ -339,9 +339,9 @@ input[type="submit"][value="削除"]:active {
 }
 
 .label {
- 
-  font-weight: 500;
-  color: #000;
+  width: 80px;
+  font-weight: 600;
+  color: #555;
 }
 
 .value {
